Fixing layout bugs for #420

--- a/app/assets/stylesheets/mediaqueries/_config.scss
+++ b/app/assets/stylesheets/mediaqueries/_config.scss
@@ -21,7 +21,7 @@
 
 @mixin mqindicator($mqname) {
 
-  $debug: true;
+  $debug: false;
 
   @if $debug == true {
     body:before {
