--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -98,7 +98,7 @@
 
 
     .template--pages-home & {
-      max-width: 710px;
+      max-width: 655px;
       width: auto;
 
       .input {
